@@ -21,6 +21,9 @@ New Features:
     JAMWiki: namespace (JAMWiki:Footer, JAMWiki:Sidebar, JAMWiki:System.css).
   * Add a new JAMWiki:Header system topic that allows adding a custom message
     to the top of all pages, just below the tab bar.
+  * Move several system configuration files (jamwiki-configuration.xml, spam
+    blacklist) out of the webapp root and into the JAMWiki system directory to
+    make upgrading simpler.
   * Be more strict with HTML-like tags: tags of the form "< tag>" or "< / tag>"
     are no longer supported and must be of the form "<tag>" or "</tag>".  This
     matches Mediawiki.
